feat: Completed dashboard page
- Implemented CalendarView component to display a monthly calendar.
- Added functionality to navigate between months.
- Highlighted today's date and dates with events.
- Created CourseCard component for displaying course information.
- Developed EventCard component for event details with date formatting.
- Introduced Progress component for visual representation of progress.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,9 @@
   --color-danger: #e53935;
   --color-tetriary: #82caff;
   --color-info: #00acc1;
+  --color-dark: #393939;
+  --shadow-all: 0 0 20px -2px rgba(0, 0, 0, 0.15);
+  --shadow-all-sm: 0 0 10px -4px rgba(0, 0, 0, 0.15);
 }
 
 :root {
